--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
 li {
     cursor: pointer;
   }
-  
+body{
+    font-size: 30px;
+    font-family: Arial, sans-serif;
+    margin-top: 20px;
+    margin-left: 350px;
+}  
